@@ -3,16 +3,22 @@ package com.loopers.application.payment;
 import com.loopers.domain.order.Order;
 import com.loopers.domain.order.OrderLine;
 import com.loopers.domain.order.OrderService;
+import com.loopers.domain.payment.PaymentFailureReason;
 import com.loopers.domain.payment.PaymentService;
+import com.loopers.domain.point.Point;
 import com.loopers.domain.point.PointService;
+import com.loopers.domain.product.Product;
 import com.loopers.domain.product.ProductCommand;
 import com.loopers.domain.product.ProductService;
 import com.loopers.support.error.CoreException;
 import com.loopers.support.error.ErrorType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -22,42 +28,59 @@ public class PaymentUseCase {
     private final ProductService productService;
     private final PointService pointService;
     private final PaymentService paymentService;
+    private final PaymentFailureHandler failureHandler;
 
+    @Transactional
     public PaymentResult.Pay pay(Long userId, PaymentInfo.Pay payInfo) {
-        // 0. 주문 조회 및 수량 확인
-        Order order = orderService.getUserOrder(userId, payInfo.orderId());
-        List<OrderLine> orderLines = order.getOrderLines();
+        try {
+            return tryPayment(userId, payInfo);
+        } catch (CoreException e) {
+            failureHandler.handle(userId, payInfo, PaymentFailureReason.fromMessage(e.getMessage()));
+            throw e;
+        }
+    }
 
-        List<ProductCommand.CheckStock> checkStocksCommand = orderLines.stream()
-                .map(orderLine -> ProductCommand.CheckStock.of(orderLine.getProductId(), orderLine.getQuantity()))
-                .collect(Collectors.toList());
+    @Transactional
+    public PaymentResult.Pay tryPayment(final Long userId, final PaymentInfo.Pay payInfo) {
+        // 주문 조회
+        final Order order = orderService.getUserOrder(userId, payInfo.orderId());
+        final List<OrderLine> orderLines = order.getOrderLines();
+
+        // OrderLine에서 상품 및 수량 확인
+        List<Long> productIds = orderLines.stream()
+                .map(OrderLine::getProductId)
+                .toList();
 
         // 1. 재고 차감
-        if (!productService.deductStock(checkStocksCommand)) {
-            return fail(order, payInfo, "재고가 부족합니다.");
+        List<Product> products = productService.findAllValidProductsOrThrow(productIds);
+
+        // Product 매핑을 위한 Map 생성
+        Map<Long, Product> productMap = products.stream()
+                .collect(Collectors.toMap(Product::getId, Function.identity()));
+        List<ProductCommand.DeductStock> deductStocksCommand = orderLines.stream()
+                .map(orderLine -> {
+                    Product product = productMap.get(orderLine.getProductId());
+                    return ProductCommand.DeductStock.of(product, orderLine.getQuantity());
+                })
+                .collect(Collectors.toList());
+
+        if (!productService.deductStock(deductStocksCommand)) {
+            throw new CoreException(ErrorType.CONFLICT, PaymentFailureReason.OUT_OF_STOCK.getMessage());
         }
 
         // 2. 포인트 결제
-        if (!pointService.use(userId, order.getPaymentAmount())) {
-            return fail(order, payInfo, "포인트 결제에 실패했습니다.");
-        }
+        Point point = pointService.findByUserWithLock(userId);
+        pointService.useOrThrow(point, order.getPaymentAmount());
 
         // 3. 결제 성공 처리
-        boolean isPaymentConfirmed = true;
-        orderService.finalizePaymentResult(order, isPaymentConfirmed);
-        Long paymentId = paymentService.save(payInfo.orderId(), payInfo.paymentMethod(), order.getPaymentAmount(), isPaymentConfirmed);
+        boolean isOrderConfirm = true;
+        orderService.finalizeOrderResult(order, isOrderConfirm);
+        Long paymentId = paymentService.saveSuccess(
+                payInfo.orderId(),
+                payInfo.paymentMethod(),
+                order.getPaymentAmount()
+        );
 
-        return PaymentResult.Pay.of(paymentId, isPaymentConfirmed);
+        return PaymentResult.Pay.of(paymentId);
     }
-
-    // 공통 실패 처리 메서드
-    private PaymentResult.Pay fail(Order order, PaymentInfo.Pay payInfo, String errorMessage) {
-        boolean isPaymentConfirmed = false;
-
-        orderService.finalizePaymentResult(order, isPaymentConfirmed);
-        paymentService.save(payInfo.orderId(), payInfo.paymentMethod(), order.getPaymentAmount(), isPaymentConfirmed);
-
-        throw new CoreException(ErrorType.CONFLICT, errorMessage);
-    }
-
 }
